src/test/ui/object-lifetime/object-lifetime-default-elision.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/object-lifetime-default-elision.rs:81:5
   |
LL |     ss
   |     ^^

error: unsatisfied lifetime constraints
  --> $DIR/object-lifetime-default-elision.rs:81:5
   |
LL | fn load3<'a,'b>(ss: &'a SomeTrait) -> &'b SomeTrait {
   |          -- -- lifetime `'b` defined here
   |          |
   |          lifetime `'a` defined here
...
LL |     ss
   |     ^^ returning this value requires that `'a` must outlive `'b`

error: aborting due to previous error

